--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
 
 header{
   background-color: black;
-  background-image: url(blue-and-white.jpeg);
+  background-image: url(https://imgur.com/a/CGeRoLG);
   margin-bottom: 30px;
   padding-bottom: 50px;
 }
