--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
 
 header{
   background-color: black;
-  background-image: url(blue-and-white.jpeg);
+  background-image: url(<blockquote class="imgur-embed-pub" lang="en" data-id="a/CGeRoLG" data-context="false" ><a href="//imgur.com/a/CGeRoLG"></a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>);
   margin-bottom: 30px;
   padding-bottom: 50px;
 }
