--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ section{
 }
 
 section.solid-background{
-  background-image: url(white-and-blue-trees.jpeg);
+  background-image: url(<blockquote class="imgur-embed-pub" lang="en" data-id="a/Vg7dODe" data-context="false" ><a href="//imgur.com/a/Vg7dODe"></a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>);
   padding-top: 50px;
   padding-bottom: 50px;
   margin: 50px 0;
