--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
 
 header{
   background-color: black;
-  background-image: url(<blockquote class="imgur-embed-pub" lang="en" data-id="a/CGeRoLG" data-context="false" ><a href="//imgur.com/a/CGeRoLG"></a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>);
+  background-image: url(blue-and-white.jpeg);
   margin-bottom: 30px;
   padding-bottom: 50px;
 }
@@ -58,7 +58,7 @@ section{
 }
 
 section.solid-background{
-  background-image: url(<blockquote class="imgur-embed-pub" lang="en" data-id="a/Vg7dODe" data-context="false" ><a href="//imgur.com/a/Vg7dODe"></a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>);
+  background-image: url(white-and-blue-trees.jpeg);
   padding-top: 50px;
   padding-bottom: 50px;
   margin: 50px 0;
